# a-star-visual

./: .gitignore  CMakeLists.txt  README.md  input.txt
include/: Field.h  Node.h  SDLField.h
src/: Field.cpp  Node.cpp  SDLField.cpp  main.cpp
